# Indoor-Routing-Library

./: .gitmodules  CMakeLists.txt  Makefile  README.md
include/navigine/route_graph/: graph.h  level_point.h  route_graph.h  route_graph_utils.h  route_path.h  router.h  utils.h
src/: CMakeLists.txt  graph.cpp  route_graph.cpp  route_graph_utils.cpp  route_path.cpp  router.cpp
tests/: CMakeLists.txt  graph_test.cpp  main.cpp  route_graph_test.cpp  route_graph_utils_test.cpp  router_test.cpp  scc_test.cpp  simplify_test.cpp  split_test.cpp  test_utils.h
tests/data/case_1/: graph.h
tests/data/case_2/: graph.h
